--- a/Client/Css/input.css
+++ b/Client/Css/input.css
@@ -246,3 +246,20 @@ header{
 #FormPanel{
   transition: all;
 }
+
+.panelclassclub{
+  display: none;
+  animation:dislaypanelclubanimation 1s ;
+
+}
+@keyframes dislaypanelclubanimation {
+
+  0%{
+    transform: translateY(-15px);
+    opacity: 0;
+  }
+  100%{
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
