--- a/Client/Css/input.css
+++ b/Client/Css/input.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body{
   background-color: #060B27;
   height: 100dvh;
@@ -12,6 +11,7 @@ header{
   top: 0;
   left: 0;
   right: 0;
+  background-color: var(primarycolor);
   backdrop-filter: blur(10px);
   z-index: 100;
 }
